"wire" has come

--- a/.air.conf
+++ b/.air.conf
@@ -7,7 +7,7 @@ tmp_dir = "tmp"
 
 [build]
 # Just plain old shell command. You could use `make` as well.
-cmd = "go build -o ./tmp/main ."
+cmd = "wire gen && go build -o ./tmp/main main.go wire_gen.go"
 # Binary file yields from `cmd`.
 bin = "tmp/main"
 # Customize binary.
@@ -19,7 +19,7 @@ exclude_dir = ["assets", "tmp", "vendor", "frontend/node_modules"]
 # Watch these directories if you specified.
 include_dir = []
 # Exclude files.
-exclude_file = []
+exclude_file = ["wire_gen.go"]
 # This log file places in your tmp_dir.
 log = "air.log"
 # It's not necessary to trigger build each time file changes if it's too frequent.
