--- a/docker/Dockerfile.product
+++ b/docker/Dockerfile.product
@@ -10,8 +10,8 @@ WORKDIR /go/src/work
 # ホストのファイルをコンテナの作業ディレクトリに移行
 ADD . /go/src/work
 
-RUN go mod download && \
-    GOOS=linux GOARCH=amd64 go build -o=/build/app && \
-    chmod u+x /build/app
+RUN go mod download
+RUN GOOS=linux GOARCH=amd64 go build -o=/build/app && \
+RUN chmod u+x /build/app
 
 ENTRYPOINT ["/build/app"]
